# atmosledger

./: .dockerignore  .env  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  run-dev.ps1
alembic/: env.py
alembic/versions/: 98612e0354e5_create_core_tables.py
atmosledger-ui/src/api/: anomalies.ts  client.ts  locations.ts  series.ts  types.ts
atmosledger-ui/src/components/: AnomaliesTable.tsx  Card.tsx  DateRange.tsx  LineSeriesChart.tsx
atmosledger-ui/src/pages/: DashboardPage.tsx
src/atmosledger/: logging_config.py  main.py  settings.py
src/atmosledger/api/: deps.py
src/atmosledger/api/routes/: anomalies.py  ingestion.py  locations.py  series.py
src/atmosledger/db/: session.py
src/atmosledger/db/orm/: __init__.py  anomoly_daily.py  daily_aggregate.py  location.py  observation.py
src/atmosledger/db/repo/: anomaly_daily_repo.py  daily_aggregate_repo.py  location_repo.py  observation_repo.py
src/atmosledger/providers/: open_meteo_client.py
src/atmosledger/services/: aggregation_service.py  anomaly_service.py  ingestion_service.py
src/atmosledger/workers/rq/: jobs.py  worker.py
tests/: conftest.py
tests/api/: test_health.py  test_locations.py
